# attention-transformers

./: .gitignore  README.md  pyproject.toml
stage1_basics/: Learning Rate.md  README.md  train_vit_cifar10.ipynb  train_vit_on_cifar10.py
stage2_understanding/: README.md  patchify.py  visualize_attention.py
stage3_raj/: README.md  convert_to_torchscript.py  eval_raj_vit.py  inference_torchscript.py  raj_dataset.py  train_raj_vit.py
stage3_raj/install/: INSTALL.md  install_pytorch.sh  pyproject.cpu.toml  pyproject.toml
stage3_raj/torchscript/: convert_to_torchscript.py  inference_torchscript.py
vision-transformer/: README.md  train_transformer.py
