[project]
name = "raj-vit-training"
version = "0.1.0"
description = "Vision Transformer training for Raj tissue classification"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Note: This file specifies PyTorch dependencies but not the CUDA version.
# To install PyTorch with GPU support, use one of these methods:
#
# Method 1: Using pip with PyTorch index (RECOMMENDED for GPU)
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
#
# Method 2: Using uv with PyTorch index
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
#
# Replace cu121 with your CUDA version:
#   - cu118: CUDA 11.8
#   - cu121: CUDA 12.1
#   - cu124: CUDA 12.4
#
# To check your CUDA version: nvidia-smi
#
# For CPU-only installation, use: pyproject.cpu.toml
